优化:流程表单通用接口
