# routes/flow/base/routes.go
@@ -13,6 +13,6 @@ func RegisterFlowBaseRoute(e *gin.Engine) {
 	g.Use(middleware.JwtMiddleware)
 	g.GET("/flowcate", base.FlowcateHandle)
 	g.GET("/flowform", base.FlowformHandle)
-	g.GET("/flowformveiw/:key/:version", base.FlowformveiwHandle)
+	g.GET("/flowformveiw/:id", base.FlowformveiwHandle)
 
 }
